# unnamed-os

./: .clangd  .gitignore  Build_scriptUnix.sh  CMakeLists.txt  README.md  build_win.cmd
.github/workflows/: cmake-single-platform.yml
includes/: DisplayShit.h  definitions.h  stdlib.h
src/bootloader/: CMakeLists.txt
src/bootloader/src/: entry.asm  test.asm
src/bootloader/stage1/: CMakeLists.txt  stage1.asm
src/bootloader/stage2/: CMakeLists.txt  stage2.asm
src/kernel/: CMakeLists.txt
src/kernel/includes/: cstdarg  cstddef  cstdint  cstdio  cstring  display.h  idt.h  k_entry.h  limine.h  lowlevelio.h  memory  memory.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  string.h  thread  time.h
src/kernel/includes/drivers/: ATA.h  disk.h  display.h
src/kernel/includes/drivers/fs/: ext2.h  sfs.h
src/kernel/includes/ext2/: ext2.h
src/kernel/includes/kernel/scheduling/: TaskScheduler.h
src/kernel/includes/libc/: cstdarg  cstdint  cstring  memory  time.h
src/kernel/includes/misc/: idt.h  limine.h
src/kernel/includes/stl/: atomic  function  map  move  mutex  mutex.h  pair  shared_ptr  srand  thread  type_traits  unique_ptr  unordered_map  utility  vector
src/kernel/src/: Idr.s  entry.asm  idt.cpp  main.c  main.cpp
src/kernel/src/drivers/: ATA.cpp  disk.cpp  display.cpp
src/kernel/src/drivers/fs/: ext2.cpp  sfs.cpp
src/kernel/src/kernel/scheduling/: TaskScheduler.cpp  context_switch.asm
src/kernel/src/libc/: memory.cpp  stdio.cpp  string.cpp
src/kernel/src/misc/: font.cpp  idt.cpp
src/kernel/src/stdlib/: disk.cpp  display.c  display.cpp  font.c  font.cpp  lowlevelio.h  memory.c  memory.cpp  stdio.c  stdio.cpp  string.c  string.cpp
src/linker_scripts/: link-32.ld  link-64-kernel.ld  link-64.ld
